Issue #10055 - fix core deploy with --dry-run
Signed-off-by: Lachlan Roberts <lachlan@webtide.com>